autenticaçao finalizada de uma vez